--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
-:host {
-  
+.sidenav-content{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+main {
+  height: 100vh;
+  overflow: auto;
 }
