Some Clean up After update from upstream

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,9 +3,9 @@
     Angular-Electron-Material-Plotly
     <div style="flex-grow: 1"></div>
     <mat-nav-list>
-      <button mat-button routerLink="/home" routerLinkActive="active">
+      <button mat-button routerLink="/plot" routerLinkActive="active">
         <mat-icon>home</mat-icon>
-        <span class="label">Home</span>
+        <span class="label">Plot</span>
       </button>
       <button mat-button routerLink="/settings" routerLinkActive="active">
         <mat-icon>settings</mat-icon>
